--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="section-four">
 
                 <figure>
-                    <figcaption>Cor Blimey!</figcaption>
+                    <figcaption class="blimey">Cor Blimey!</figcaption>
                     <audio
                         controls src="audio/corblimeygovernorfnl.m4a">
                             Your browser does not support the
