--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
         <div class="container-navigation">
 
-            <li><a href="#flex">1.FlexGrow</a></li>
-            <li><a href="#center">2.CenterItem</a></li>
-            <li><a href="#video">3.Video</a></li>
-            <li class="#push"><a href="#audio">4.Audio</a></li>
-            <li><a href="#media">5.Media</a></li>
+            <button><a href="#flex">1.FlexGrow</a></button>
+            <button><a href="#center">2.CenterItem</a></button>
+            <button><a href="#video">3.Video</a></button>
+            <button class="#push"><a href="#audio">4.Audio</a></button>
+            <button><a href="#media">5.Media</a></button>
 
         </div>
 
