--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             <button><a href="#flex">1.FlexGrow</a></button>
             <button><a href="#center">2.CenterItem</a></button>
             <button><a href="#video">3.Video</a></button>
-            <button class="#push"><a href="#audio">4.Audio</a></button>
+            <button class="push"><a href="#audio">4.Audio</a></button>
             <button><a href="#media">5.Media</a></button>
+            <a href="button.html" target="_blank"><button>Would you like to know more?</button></a>
 
         </div>
 
