--- a/index.html
+++ b/index.html
@@ -118,5 +118,10 @@
         
 
         </main> 
+        <footer>
+            <p>This website is brought to you by
+                the letter F, B, and the number 42. It was made by michael
+            </p>
+        </footer>
 </body>
 </html>
