--- a/button.html
+++ b/button.html
@@ -39,6 +39,9 @@
  
  
         <main>
+            <section class="button-one-section">
+                <img class="button-top-img" src="http://www.placekitten.com/800/300"> 
+            </section>
             
         </main> 
         <footer>
